# VimFrameSwitcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VimFrameSwitcher.json.in  vimframeswitcher.cpp  vimframeswitcher.hpp  vimframeswitcher.pro  vimframeswitcher_global.hpp  vimframeswitcherconstants.hpp
.github/workflows/: build_cmake.yml  build_qmake.yml
